Scheduling bug fixes